syntax = "proto3";

package pb;

option go_package = "github.com/wpcodevo/golang-mongodb/pb";

import "user.proto";

message ResetPasswordInput {
  string resetCode=1;
  string password = 2;
  string passwordConfirm = 3;
}

message ResetPasswordResponse { User user = 1; }

